# django-template

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
core/general/utils/: misc.py  settings.py
core/project/: asgi.py  wsgi.py
core/project/settings/: __init__.py  base.py  custom.py  logging.py
