[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
colorlog = "^6.8.2"
pre-commit = "^3.8.0"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
